# autonomi-browser

./: README.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: main.yml
src/: app.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/store/: store.ts
src/viewers/: audio-viewer.tsx  image-viewer.tsx  video-viewer.tsx
