[package]
name = "autonomi-browser"
version = "0.1.0"
description = "Autonomi Browser"
authors = ["safemedia"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "autonomi_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.7", features = [] }
tauri-plugin-opener = "2.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
base64 = "0.22.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anttp = "0.12"
yamux = "=0.13.5"
once_cell = "1.19"
dirs = "5"
libp2p = "0.56.0"
